<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_rectangle_58"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        tools:context=".MainActivity">

        <View
            android:id="@+id/back"
            android:layout_width="7dp"
            android:layout_height="14dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/ic_vector_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/personal_dataTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="121dp"
            android:layout_marginRight="123dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/personaldata_text"
            android:textAppearance="@style/personal_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="25dp"
            android:text="@string/number_text"
            android:textAppearance="@style/phone_text"
            app:layout_constraintTop_toBottomOf="@+id/personal_dataTv"
            app:layout_constraintLeft_toLeftOf="parent" />

        <View
            android:id="@+id/is_exite"
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/ic_ic_exit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="194dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/shape_et_bck"
            android:hint="@string/name_text"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#050505"
            android:textColorHint="#5C5C5C"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/surnameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_et_bck"
            android:hint="@string/surname_text"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:textColor="#050505"
            android:textColorHint="#5C5C5C"
            app:layout_constraintEnd_toEndOf="@+id/nameEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nameEt"
            app:layout_constraintTop_toBottomOf="@+id/nameEt"/>


        <EditText
            android:id="@+id/emailEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_et_bck"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:textColor="#050505"
            android:textColorHint="#5C5C5C"
            app:layout_constraintEnd_toEndOf="@+id/surnameEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/surnameEt"
            app:layout_constraintTop_toBottomOf="@+id/surnameEt"/>

        <EditText
            android:id="@+id/datebirthEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_et_bck"
            android:hint="@string/datebirth_text"
            android:inputType="number"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:textColor="#050505"
            android:textColorHint="#5C5C5C"
            app:layout_constraintEnd_toEndOf="@+id/emailEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/emailEt"
            app:layout_constraintTop_toBottomOf="@+id/emailEt"
            android:drawableRight="@drawable/ic_vector_16__1_" />



    <EditText
        android:id="@+id/preferencesEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_et_bck"
        android:hint="@string/preferences_text"
        android:inputType="number"
        android:padding="24dp"
        android:textColor="#050505"
        android:textColorHint="#5C5C5C"
        app:layout_constraintEnd_toEndOf="@+id/datebirthEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/datebirthEt"
        app:layout_constraintTop_toBottomOf="@+id/datebirthEt"/>


        <TextView
            android:id="@+id/newsTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:layout_marginLeft="25dp"
            android:text="@string/news_text"
            android:textAppearance="@style/personal_data"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preferencesEt" />

       <Switch

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="99dp"
            android:layout_marginRight="25dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preferencesEt"
            android:theme="@style/MySwitch"/>

        <TextView
            android:id="@+id/advertisingTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/advertising_text"
            android:textAppearance="@style/advertising"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsTv"/>

        <Button
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/shape_add_bck"
            android:padding="12dp"
            android:text="@string/add_text"
            android:textAppearance="@style/personal_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsTv"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/rectangle"
            android:layout_width="134dp"
            android:layout_height="5dp"
            android:layout_marginLeft="121dp"
            android:layout_marginRight="121dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/ic_rectangle"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addBtn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>